--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -15,12 +15,12 @@
             </a>
           </li>
           <li class="nav-item">              
-            <a class="nav-link {% if view_name == 'about:about' %}active{% endif %}" href="{% url 'pages:about' %}">
+            <a class="nav-link {% if view_name == 'pages:about' %}active{% endif %}" href="{% url 'pages:about' %}">
               О проекте
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if view_name == 'about:rules' %}active{% endif %}" href="{% url 'pages:rules' %}">
+            <a class="nav-link {% if view_name == 'pages:rules' %}active{% endif %}" href="{% url 'pages:rules' %}">
               Наши правила
             </a>
           </li>
