--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
-{% load static %}
 
-{% block title %}Публикации в категории {{ category }}{% endblock %}
+{% block title %}
+  Публикации в категории {{ category }}
+{% endblock %}
 
 {% block content %}
-<main>
-  <div class="container py-5">
-    <h1>Публикации в категории {{ category }}</h1>
-  </div>
-</main>
+  <main>
+    <div class="container py-5">
+      <h1>Публикации в категории {{ category }}</h1>
+    </div>
+  </main>
 {% endblock %}
