--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
-
 {% block content %}
 <!DOCTYPE html> 
-<html lang="ru">
+{% block lang %}ru{% endblock %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,24 +20,24 @@
         <h1>Лента записей</h1>                        
         <hr>
         {% for post in posts %}
-        <article>
-          <ul>
-            <li>
-              Место: {{ post.location }}              
-            </li>
-            <li>
-              Дата: {{ post.date }}
-            </li>
-            <li>
-              Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
-            </li>
-          </ul>          
-          <p>
-            {{ post.text|truncatewords:10 }}
-          </p>
-          <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
-        </article>
-        <hr>
+          <article>
+            <ul>
+              <li>
+                Место: {{ post.location }}              
+              </li>
+              <li>
+                Дата: {{ post.date }}
+              </li>
+              <li>
+                Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
+              </li>
+            </ul>          
+            <p>
+              {{ post.text|linebreaks|truncatewords:10 }}
+            </p>
+            <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
+          </article>
+          <hr>
         {% endfor %}
       </div>
     </main>
